Issue #98: users openapi for update (#106)
